Fix homepage news divider on mobile

--- a/sass/components/_news_list_item.scss
+++ b/sass/components/_news_list_item.scss
@@ -50,7 +50,8 @@
       padding-left: 0;
     }
     + .news-list-item {
-      margin-top: 0;
+      margin-top: 4px;
+      background-size: 200%;
     }
   }
 
